--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,6 +36,25 @@ body {
     mix-blend-mode: normal;
     opacity: 0.25;
 }
+/* menu do mobile*/
+.menu-opener {
+    display: none;
+    margin-right: 30px;
+}
+
+.menu-opener img {
+    width: 35px;
+    height: 35px;
+}
+
+.menu-closer {
+    display: none;
+}
+
+.menu-closer img {
+    width: 35px;
+    height: 35px;
+}
 /* links do navbar */
 .header-navbar-links-group {
     display: flex;
@@ -149,17 +168,16 @@ body {
 
 /* monitores 1024 */
 
-@media (min-width: 1024px) and (max-width: 1440px) {
-    body {
-    }
+@media (min-width: 768px) and (max-width: 1400px) {
+    
 
     .sections-default {
-        padding-top: 100px;
+        padding-bottom: 50px;
     }
 }
 
 /* responsividade tablet*/
-@media  (min-width: 425px) and (max-width: 768px) {
+@media  (min-width: 450px) and (max-width: 768px) {
    body {
     width: 768px;
    }
@@ -210,19 +228,77 @@ body {
     }
 }
 /* responsividade celulares */
-@media  (min-width: 375px) and (max-width: 426px) {
-   body {
-    width: 425px;
-   }
+@media  (min-width: 320px) and (max-width: 450px) {
+    /* header e menu-opener */
+    .header-navbar-group {
+            margin-top: 20px;
+    }
 
    .header-rectangle-mid {
     display: none ;
-}
+    }
+
+    .menu-opener {
+        display: block;
+    }
+
+    .menu-closer {
+        display: block;
+        margin-top: 200px;
+        margin-bottom: 100px;
+        margin-right: 20px;
+    }
 
    .header-navbar-links-group {
-    display: none;
+    position: absolute;
+    z-index: 99;
+    right: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    width: 254px;
+    height: 207vh;
+   }
+   
+   .nav-area {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+
+   .ul-links {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 90px;
    }
 
+   .ul-links a {
+    font-size: 20px;
+    padding-bottom: 0px;
+   }
+
+   .li-links {
+    padding-top: 35px;
+   }
+
+   .li-links:first-child {
+    margin-left: 0px;
+    }
+    .li-links:nth-child(2) {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .li-links:nth-child(3) {
+        margin-right: 0px;
+    }
+
+
+   .selected-page {
+    border-bottom: 0px;
+   }
+
+   /* escopo do site */
    .sections-default {
     flex-direction: column;
     align-items: center;
@@ -258,51 +334,13 @@ body {
    
 
 }
-@media  (min-width: 320px) and (max-width: 375px) {
-   body {
-    width: 375px;
-   }
 
-   .header-rectangle-mid {
-    display: none ;
+/* js classes */
+
+.display-menu {
+    display: flex;
 }
 
-   .header-navbar-links-group {
+.hide-menu {
     display: none;
-   }
-
-   .sections-default {
-    flex-direction: column;
-    align-items: center;
-    padding-top: 50px;
-   }
-
-   .text-area {
-    text-align: center;
-   }
-
-   .main-title {
-    font-size: 80px;
-}
-
-    .text-over-title {
-        width: 327px;
-        font-size: 15px;
-    }
-
-    .text-above-title {
-        font-size: 16px;
-    }
-
-    .white-circle {
-        width: 150px;
-        height: 150px;
-    }
-
-    .circle-area {
-        padding-top: 135px;
-        padding-bottom: 47.5px;
-    }
-   
-
 }
